--- a/neighborhoodapp/templates/moreabout.html
+++ b/neighborhoodapp/templates/moreabout.html
@@ -1,12 +1,12 @@
 {%extends 'base.html'%}
 {% load bootstrap4 %}
-
+{% block content %}
 <style>
     .panel {
         border: none;
     }
 </style>
-<div class="container-fluid" style="background-color: #AFD2F5;">
+
     <div class="row">
         <div class="col-md-1">
         </div>
