--- a/neighborhoodapp/templates/moreabout.html
+++ b/neighborhoodapp/templates/moreabout.html
@@ -6,8 +6,8 @@
         border: none;
     }
 </style>
-
-    <div class="row">
+<div class="container-fluid" style="background-color: #AFD2F5;">
+   
         <div class="col-md-1">
         </div>
        
