--- a/neighborhoodapp/templates/moreabout.html
+++ b/neighborhoodapp/templates/moreabout.html
@@ -7,8 +7,8 @@
     }
 </style>
 <div class="container-fluid" style="background-color: #AFD2F5;">
-   
-        <div class="col-md-1">
+    <div class="row">
+        
         </div>
        
             <div class="panel panel-default" style="margin-top:5%">
