--- a/neighborhoodapp/templates/moreabout.html
+++ b/neighborhoodapp/templates/moreabout.html
@@ -8,7 +8,7 @@
 </style>
 <div class="container-fluid" style="background-color: #AFD2F5;">
     <div class="row">
-        
+        <div class="col-md-1">
         </div>
        
             <div class="panel panel-default" style="margin-top:5%">
@@ -17,7 +17,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-12" style="padding-top: 30px;">
-                            <h id="description">Description:</h>
+                            
                             <p style="color: black;">{{project.description}}</p>
                             <h id="description">Population:</h>
                             <p style="color: black;">{{project.count}}</p>
