--- a/neighborhoodapp/templates/moreabout.html
+++ b/neighborhoodapp/templates/moreabout.html
@@ -17,9 +17,9 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-12" style="padding-top: 30px;">
-                            
+                            <h id="description">Description:</h>
                             <p style="color: black;">{{project.description}}</p>
-                            <h id="description">Population:</h>
+                            
                             <p style="color: black;">{{project.count}}</p>
                             <h id="description">Location:</h>
                         <p style="color: black;">{{project.location}}</p>
