--- a/neighborhoodapp/templates/moreabout.html
+++ b/neighborhoodapp/templates/moreabout.html
@@ -19,9 +19,9 @@
                         <div class="col-md-12" style="padding-top: 30px;">
                             <h id="description">Description:</h>
                             <p style="color: black;">{{project.description}}</p>
-                            
+                            <h id="description">Population:</h>
                             <p style="color: black;">{{project.count}}</p>
-                            <h id="description">Location:</h>
+                            
                         <p style="color: black;">{{project.location}}</p>
                             </p>
                             <a href="{% url 'deletehood' project.id%}" style="margin-right: 30px;"><i class="fa-solid fa-trash"></i>Delete</a>
