--- a/neighborhoodapp/templates/navbar.html
+++ b/neighborhoodapp/templates/navbar.html
@@ -16,9 +16,8 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'profile'%}">Profile</a>
             <a class="dropdown-item" href="{% url 'homepage' %}">Home</a>
-           
-            <a class="dropdown-item" href="/accounts/logout">Logout</a>
-           
+            <a class="dropdown-item" href="/accounts/login">Login</a>
+            
           </div>
         </li>
 
