added create neighborhood

--- a/neighborhoodapp/templates/navbar.html
+++ b/neighborhoodapp/templates/navbar.html
@@ -17,14 +17,15 @@
             <a class="dropdown-item" href="{% url 'profile'%}">Profile</a>
             <a class="dropdown-item" href="{% url 'homepage' %}">Home</a>
             <a class="dropdown-item" href="/accounts/login">Login</a>
-            
+            <a class="dropdown-item" href="/accounts/logout">Logout</a>
+           
           </div>
         </li>
 
         <ul>
           <li style="padding-top: 10px; list-style: none;">
            
-            <a href="{%url 'new_home'%}">CREATE NEIGHBORHOOD</a>
+            
           </li>
         </ul>
       </ul>
