--- a/neighborhoodapp/templates/new_post.html
+++ b/neighborhoodapp/templates/new_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 
-{%block content%}
 <div>
     <div class="container">
         <div class="col-md-2"></div>
