--- a/neighborhoodapp/templates/new_post.html
+++ b/neighborhoodapp/templates/new_post.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 
-
+{%block content%}
 <div>
-    <div class="container">
+    
         <div class="col-md-2"></div>
         <div class="col-sm-12 col-lg-8 m-auto card" style="padding: 2%;background-color: #AFD2F5;">
             <h3 class="text-center">Add New Post</h3>
