--- a/neighborhoodapp/templates/new_post.html
+++ b/neighborhoodapp/templates/new_post.html
@@ -6,13 +6,14 @@
     <div class="container">
         <div class="col-md-2"></div>
         <div class="col-sm-12 col-lg-8 m-auto card" style="padding: 2%;background-color: #AFD2F5;">
-            
+            <h3 class="text-center">Add New Post</h3>
+
             <form action="" method="post" enctype="multipart/form-data">
                 <br>
                 {%csrf_token%}
 
                 {% bootstrap_form form%}
-                <input type="submit" class="btn btn-md btn-primary" value="Save">
+               
 
                 <br><br>
             </form>
