added submit button

--- a/neighborhoodapp/templates/new_post.html
+++ b/neighborhoodapp/templates/new_post.html
@@ -13,7 +13,7 @@
                 {%csrf_token%}
 
                 {% bootstrap_form form%}
-               
+                <input type="submit" class="btn btn-md btn-primary" value="Save">
 
                 <br><br>
             </form>
