--- a/neighborhoodapp/templates/new_business.html
+++ b/neighborhoodapp/templates/new_business.html
@@ -6,9 +6,9 @@
     <div class="container">
         <div class="col-md-2"></div>
         <div class="col-sm-12 col-lg-8 m-auto card" style="padding: 2%;background-color: #AFD2F5;">
-            <h3 class="text-center">Add New Business</h3>
+           
 
-            
+            <form action="" method="post" enctype="multipart/form-data">
                 <br>
                 {%csrf_token%}
 
